# keel

./: .gitignore  README.md  asteroids.py  platformer.py  pong.py  pyproject.toml  pyrightconfig.json
examples/: asset_hot_reload.py  cube_demo.py  devtools_overlay.py  hello_sprite.py  scene_save_load.py  tilemap_demo.py
keel/: __init__.py  gamepad.py  input.py  window.py
keel/assets/: __init__.py  hot_reload.py  registry.py  scene.py
keel/audio/: __init__.py  audio_engine.py
keel/cli/: __init__.py  commands.py  templates.py
keel/components/: __init__.py  mesh_renderer.py  text_label.py  transform2d.py  transform3d.py
keel/core/: archetype.py  events.py  query.py  scheduler.py  world.py
keel/physics/: __init__.py  components2d.py  components3d.py  enums.py  material.py  physics2d.py  physics3d.py
keel/renderer/: __init__.py  batch2d.py  camera2d.py
keel/renderer3d/: __init__.py  camera3d.py  frustum.py  shader3d.py
keel/text/: __init__.py  builtin_font.py  font.py  shader_text.py  text_renderer.py
keel/tools/: debug_draw.py  inspector.py  profiler.py
pyge/: __init__.py  gamepad.py  loop.py
pyge/assets/: __init__.py  hot_reload.py  scene.py
pyge/audio/: __init__.py  components.py
pyge/cli/: __init__.py  commands.py  templates.py
pyge/components/: __init__.py  sprite.py  text_label.py
pyge/core/: __init__.py  archetype.py  events.py  query.py  scheduler.py  (+1 more)
tests/: test_assets.py  test_audio.py  test_ecs_core.py  test_gamepad.py  test_physics.py  test_renderer2d.py  test_renderer3d.py  test_text.py  test_tooling.py  test_window_loop.py
(+25 files in other folders)
